# beacon-metrics-gazer

./: .dockerignore  Cargo.toml  Dockerfile  README.md  groups.txt
.github/workflows/: ci.yml  release.yml
asda/: Cargo.toml
scripts/: check_synced_readme.py  sync_readme.py
src/: config.rs  groups_file.rs  main.rs  metrics.rs  ranges.rs  ssz_state.rs  util.rs
src/fixtures/: state_148990.ssz  state_devnet6_genesistime-1686904523_slot-416.ssz
