[package]
name = "rs-beacon-dev-metrics"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
clap = { version = "4.2.1", features = ["derive"] }
# eth2 = { git = "https://github.com/sigp/lighthouse", branch = "stable" }
# sensitive_url = { git = "https://github.com/sigp/lighthouse", branch = "stable" }
hyper = { version = "0.14.25", features = ["server"] }
lazy_static = "1.4.0"
prometheus = "0.13"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11.16", features = ["json"] }
serde = { version = "1.0.159", features = ["derive"] }
serde_json = "1.0.95"
bytes = "1.4.0"
byteorder = "1.4.3"
prettytable-rs = "0.10.0"
regex = "1.7.3"
url = "2.3.1"

[patch]
[patch.crates-io]

[dev-dependencies]
hex = "0.4.3"
# eth2_ssz = { git = "https://github.com/sigp/lighthouse", branch = "stable" }
# eth2_ssz_types = { git = "https://github.com/sigp/lighthouse", branch = "stable" }
# tree_hash = { git = "https://github.com/sigp/lighthouse", branch = "stable" }
# tree_hash_derive = { git = "https://github.com/sigp/lighthouse", branch = "stable" }
# eth2_serde_utils = { git = "https://github.com/sigp/lighthouse", branch = "stable" }
# eth2_ssz_derive = { git = "https://github.com/sigp/lighthouse", branch = "stable" }
# eth2_hashing = { git = "https://github.com/sigp/lighthouse", branch = "stable" }
