[package]
name = "beacon-metrics-gazer"
version = "0.1.0"
edition = "2021"
description = "Collects network wide participation metrics given a range of indexes"
keywords = ["ethereum", "beacon", "metrics"]
repository = "https://github.com/dapplion/beacon-metrics-gazer"
documentation = "https://docs.rs/beacon-metrics-gazer"
authors = ["dapplion <dapplion@chainsafe.io>"]
readme = "README.md"
license = "MIT OR Apache-2.0"

[[bin]]
name = "beacon-metrics-gazer"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.70"
bytes = "1.4.0"
byteorder = "1.4.3"
clap = { version = "4.2.1", features = ["derive"] }
hyper = { version = "0.14.25", features = ["server"] }
lazy_static = "1.4.0"
prettytable-rs = "0.10.0"
prometheus = "0.13"
serde = { version = "1.0.159", features = ["derive"] }
serde_json = "1.0.95"
regex = "1.7.3"
reqwest = { version = "0.11.16", features = ["json"] }
tokio = { version = "1", features = ["full"] }
url = "2.3.1"

[dev-dependencies]
hex = "0.4.3"

